--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -168,24 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "4a7a8a76-8a52-468b-84d5-13ad0a952e25",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading from csv...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import for acquisition\n",
-    "import os\n",
-    "import json\n",
-    "import requests\n",
-    "import final_acquire as acquire\n",
     "import final_prepare as prepare\n",
     "import final_explore as explore\n",
     "import final_model as model\n",
@@ -203,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "292b3645-39b5-422e-8cf4-e884a2004574",
    "metadata": {},
    "outputs": [
@@ -296,7 +283,7 @@
        "4  #thatPOWER Lyrics[Instrumental break]  [Pre-Ch...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "a3880d05-efc6-46ab-972a-8c76a99d3a30",
    "metadata": {},
    "outputs": [
@@ -319,7 +306,7 @@
        "(23762, 5)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "d32c4894-1f7c-4684-8b22-81b119ad2ca3",
    "metadata": {},
    "outputs": [],
@@ -434,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "1c382de0-355d-40e6-9afe-137f3c86888b",
    "metadata": {},
    "outputs": [
@@ -699,7 +686,7 @@
        "4  [('oh', 'alive', 'alive'), ('alive', 'alive', ...        sex  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "cfa98112-1a01-4d46-bfe5-70db5d26156e",
    "metadata": {},
    "outputs": [],
@@ -766,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "687cb248-9647-41c5-9d50-30a4afa44e12",
    "metadata": {},
    "outputs": [
@@ -776,7 +763,7 @@
        "((13306, 23), (5703, 23), (4753, 23))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "9dd7468a-7db3-4a6c-ba59-ca948831622c",
    "metadata": {},
    "outputs": [],
@@ -846,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "c1980cfb",
    "metadata": {},
    "outputs": [],
@@ -914,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "9faa39be-a1af-4ba8-89fb-21175c3d9c15",
    "metadata": {},
    "outputs": [
@@ -935,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "ceb2dc44-bf0e-483a-be7f-48cdf293df70",
    "metadata": {},
    "outputs": [],
@@ -963,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "d3f22a5b-4bf8-48fe-b613-1031a3ffcb57",
    "metadata": {},
    "outputs": [
@@ -1002,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "id": "48d1d42b",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "id": "bce0328d",
    "metadata": {},
    "outputs": [],
@@ -1042,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "ace94ab9",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "48eeadea",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "id": "bd98b9ac",
    "metadata": {},
    "outputs": [],
@@ -1130,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "id": "143d676b",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "e12fac52",
    "metadata": {},
    "outputs": [],
@@ -1179,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "id": "bcf3884c",
    "metadata": {},
    "outputs": [
@@ -1217,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "782fcc4c",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "id": "a02fd964",
    "metadata": {},
    "outputs": [],
@@ -1289,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "121521ff",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "017b59b0",
    "metadata": {},
    "outputs": [],
@@ -1361,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "cdfe81b1",
    "metadata": {},
    "outputs": [
@@ -1425,20 +1412,20 @@
        "0                False       NaN               NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# uncommit to run the following code\n",
-    "# results = model.run_decision_tree_models(df)\n",
-    "# results.drop(columns='test_accuracy').head(1) # show baseline"
+    "#uncommit to run the following code\n",
+    "results = model.run_decision_tree_models(df)\n",
+    "results.drop(columns='test_accuracy').head(1) # show baseline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "id": "f05f4dee",
    "metadata": {},
    "outputs": [
@@ -1519,14 +1506,14 @@
        "5                 True         5           0.20559  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# uncommit to run the following code\n",
-    "# results.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "#uncommit to run the following code\n",
+    "results.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1555,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "id": "6f34d609",
    "metadata": {},
    "outputs": [
@@ -1651,15 +1638,15 @@
        "90                 True       100                3   entropy           0.20559  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# uncommit to run the following code\n",
-    "# results2 = model.run_random_forest_models(df)\n",
-    "# results2.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "results2 = model.run_random_forest_models(df)\n",
+    "results2.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1688,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "id": "678c6e66",
    "metadata": {},
    "outputs": [
@@ -1780,15 +1767,15 @@
        "25                 True           0.20559        sag  1  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# uncommit to run the following code\n",
-    "# results3 = model.run_logistic_reg_models(df)\n",
-    "# results3.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "results3 = model.run_logistic_reg_models(df)\n",
+    "results3.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1817,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "id": "0a4460fc",
    "metadata": {},
    "outputs": [
@@ -1878,14 +1865,14 @@
        "11      0.448897                 True           0.20559  lbfgs  1  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# uncommit to run the following code\n",
-    "# results3.sort_values('validate_accuracy', ascending=False).head(1)\n"
+    "results3.sort_values('validate_accuracy', ascending=False).head(1)\n"
    ]
   },
   {
