--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -423,12 +423,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "597431a6-77a5-44bf-a6ca-6c88dda69ea6",
+   "cell_type": "markdown",
+   "id": "84533370-3ee7-4b3b-b09b-eaae03b86f22",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"final_topics.png\">"
+   ]
   },
   {
    "cell_type": "markdown",
