Updated through topic Modeling

--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -7,14 +7,7 @@
    "source": [
     "## A LYRICAL EVOLUTION: \n",
     "\n",
-    "#### An Investigation of the Cultural Lexicon of U.S. Popular Music from 1958 - Present"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b49eb0c4-37d7-45cc-979b-57baaf3d0d2e",
-   "metadata": {},
-   "source": [
+    "#### An Investigation of the Cultural Lexicon of U.S. Popular Music from 1958 - Present\n",
     "---"
    ]
   },
@@ -23,12 +16,7 @@
    "id": "0c102d20-adbd-44b0-a0fc-0062cacb04eb",
    "metadata": {},
    "source": [
-    "**A Time Series Analysis and Natural Language Processing Based Capstone Project Created By:**\n",
-    "\n",
-    "Jerry Nolf, Rachel Robbins-Mayhill, Ben Smith,  & Chris Teceno                      \n",
-    "\n",
-    "\n",
-    "Codeup   |   Innis Cohort   |   June 2022  "
+    "By: Jerry Nolf, Rachel Robbins-Mayhill, Ben Smith,  & Chris Teceno    |    Codeup   |   Innis Cohort   |   June 2022  "
    ]
   },
   {
@@ -37,6 +25,14 @@
    "metadata": {},
    "source": [
     "<img src=\"dataset-cover.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0907b50f-dc30-4e34-8486-b873be7861be",
+   "metadata": {},
+   "source": [
+    "*** **WARNING**: *** This project contains explicit content in the form of isolated words identified through Topic Modeling as features grouped within a topic. "
    ]
   },
   {
@@ -419,7 +415,7 @@
    "source": [
     "### Topic Modeling\n",
     "\n",
-    "The extraction of topics in order to have a better understanding of what was being talked about in the lyrics was spearheaded by the use of Latent Dirichlet Allocation (or LDA). This unsupervised machine learning method detected word and phrase patterns. It then clustered groups of words that could best be labeled as a topic. 20 major topics were originally produced and will be outlined in more detail thorugh the exploration section of this report."
+    "The extraction of topics in order to have a better understanding of what was being talked about in the lyrics was spearheaded by the use of Latent Dirichlet Allocation (or LDA). This unsupervised machine learning method detected word and phrase patterns. It then clustered groups of words that could best be labeled as a topic. 20 major topics were originally produced, but 3 were overlapping in content and were therefore combined with others, resulting in 17 final topics to explore. These topics will be outlined in more detail thorugh the exploration section of this report."
    ]
   },
   {
@@ -427,7 +423,7 @@
    "id": "84533370-3ee7-4b3b-b09b-eaae03b86f22",
    "metadata": {},
    "source": [
-    "<img src=\"final_topics.png\">"
+    "<img src='final_topics.png' width=\"850\" height=\"350\" align=\"left\"/>"
    ]
   },
   {
