Updated Sentiment Analysis

--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -410,12 +410,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c7e776a-600d-45a1-9da9-7949bafdfec4",
+   "metadata": {},
+   "source": [
+    "### Sentiment Analysis\n",
+    "\n",
+    "Natural Langauge Toolkit (NLTK) was used to prepare the corpus for sentiment analysis. NLTK assigns a score between -1 and +1 to each song based on whether the the sum of words and phrases in the song are considered to be positive or negative.\n",
+    "After scores were assigned to each song based upon the lyrical content, sentiment score ranges were divided into 5 categories: very negative, somewhat negative, nuetral, somewhat positive, and very positive. Each song was then labled with the sentiment category by it's correspoinding sentiment score in preparation for exploration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7497566e-09c6-4abf-b224-a6ace8fa173b",
    "metadata": {},
    "source": [
     "### Topic Modeling\n",
     "\n",
-    "The extraction of topics in order to have a better understanding of what was being talked about in the lyrics was spearheaded by the use of Latent Dirichlet Allocation (or LDA). This unsupervised machine learning method detected word and phrase patterns. It then clustered groups of words that could best be labeled as a topic. 20 major topics were originally produced, but 3 were overlapping in content and were therefore combined with others, resulting in 17 final topics to explore. These topics will be outlined in more detail thorugh the exploration section of this report."
+    "Latent Dirichlet Allocation (or LDA) spearheaded the extraction of topics within the lyrics. This unsupervised machine learning method detected word and phrase patterns. It then clustered groups of words that could best be labeled as a topic. 20 major topics were originally produced, but 3 were overlapping in tone and were therefore manually combined with others, resulting in 17 final topics to explore. These topics will be outlined in more detail through the exploration section of this report."
    ]
   },
   {
@@ -423,17 +434,7 @@
    "id": "84533370-3ee7-4b3b-b09b-eaae03b86f22",
    "metadata": {},
    "source": [
-    "<img src='final_topics.png' width=\"850\" height=\"350\" align=\"left\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6c7e776a-600d-45a1-9da9-7949bafdfec4",
-   "metadata": {},
-   "source": [
-    "### Sentiment Analysis\n",
-    "\n",
-    "Utilized sklearn.decomposition package. Examined the change in average sentiment score over tiem by looking at a rolling 5 year avereage and average by decade. Divided sentiment score into 5 categories: very negative, somewhat negative, nuetral, somewhat positive, very positive. Looked at what portion of the total taken up by each category adn how it changed over time. "
+    "<img src='final_topics.png' width=\"900\"  align=\"center\"/>"
    ]
   },
   {
@@ -974,6 +975,14 @@
    "source": [
     "#### QUESTION 1: \n",
     "How has song sentiment changed over time?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd75bdbe-3c78-47eb-a03e-06a4c039a942",
+   "metadata": {},
+   "source": [
+    "Examined the change in average sentiment score over tiem by looking at a rolling 5 year avereage and average by decade. "
    ]
   },
   {
