--- a/ben_data_quality_etc.ipynb
+++ b/ben_data_quality_etc.ipynb
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d1ecb95d",
+   "id": "55739be2",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "296f830a",
+   "id": "e64f995d",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "9a44f630",
+   "id": "e79d34d0",
    "metadata": {},
    "outputs": [
     {
@@ -4822,8 +4822,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "id": "9c2ffdf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28190, 13)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e73402e7",
+   "id": "2c32dfc3",
    "metadata": {},
    "outputs": [],
    "source": []
