--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -21,6 +21,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b5316282-edbd-4202-9736-911459ae923f",
+   "metadata": {},
+   "source": [
+    "The findings of this project are available in presentation format by clicking on the [Final Slide Presentation](https://www.canva.com/design/DAFCXoeG7z0/jNCtQkQFqyOTWS5Ckg8Xuw/view?utm_content=DAFCXoeG7z0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0330cf87-3d96-49e2-93f9-f638738c3096",
    "metadata": {},
    "source": [
@@ -32,15 +40,9 @@
    "id": "0907b50f-dc30-4e34-8486-b873be7861be",
    "metadata": {},
    "source": [
-    "*** **WARNING**: *** This project contains explicit content in the form of isolated words identified through Topic Modeling as features grouped within a topic. Read with caution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b5316282-edbd-4202-9736-911459ae923f",
-   "metadata": {},
-   "source": [
-    "The findings of this project are available in presentation format by clicking on the [Final Slide Presentation](https://www.canva.com/design/DAFCXoeG7z0/jNCtQkQFqyOTWS5Ckg8Xuw/view?utm_content=DAFCXoeG7z0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton)."
+    "*** **WARNING**: *** \n",
+    "\n",
+    "This project contains explicit content in the form of isolated words identified through Topic Modeling as features grouped within a topic. Read with caution."
    ]
   },
   {
@@ -49,7 +51,7 @@
    "metadata": {},
    "source": [
     "## Project Goal\n",
-    "This project aimed to investigate the patterns of song lyrics across decades by applying Natural Language Processing techniques including Topic Modeling and Sentiment Analysis, while using a Kaggle data set of the Billboard Top 100 Songs from 1958 - Present and lyrics pulled from the Genius.com API. We believe the lyrics of popular songs could be used for historical analysis using exploratory methods and hypothesis testing to identify changing societal trends in relationships, sexuality, and vulgarity. Furthermore, we beleive we can predict the decade the song appeared on the Top 100 using features and machine learning methods."
+    "This project aimed to investigate the patterns of song lyrics across decades by applying Natural Language Processing techniques including Topic Modeling and Sentiment Analysis, while using a Kaggle data set of the Billboard Top 100 Songs from 1958 - Present and lyrics pulled from the Genius.com API. We believe the lyrics of popular songs could be used for historical analysis using exploratory methods and hypothesis testing to identify changing societal trends in relationships, sexuality, and vulgarity. Furthermore, we believe we can predict the decade the song appeared on the Top 100 using features and machine learning methods."
    ]
   },
   {
@@ -103,7 +105,6 @@
     " \n",
     "##### Data-Focused Questions\n",
     "- How does sentiment within lyrics change over time?\n",
-    "- Is there a correclation between sentiment and the time a song was popular?\n",
     "- Is there a correlation between events in history and sentiment of lyrics?\n",
     "- What topics are most prevalent across the decades?\n",
     "- How do topics within lyrics change over time?\n",
@@ -155,10 +156,10 @@
     "- title\n",
     "- artist name\n",
     "- rank of song the previous week\n",
-    "- rank of song at it's peak week\n",
+    "- rank of song at its peak week\n",
     "- number of weeks song was on the Top 100  \n",
     "\n",
-    "The original Kaggle dataset contained more than 300,000 entires. We selected only unique artists and songs, to ensure there were no duplicates, keeping only the earliest appearance on the chart to standardize the selections in the event of multiple appearances. Following song selection with the Kaggle dataset, we then obtained an API token to utilize the [Genius.com](https://genius.com/) API and [LyricGenius Library](https://pypi.org/project/lyricsgenius/) to conduct web scraping and pull the lyrics for the specified songs which became the corpus for this project."
+    "The original Kaggle dataset contained more than 300,000 entries. We selected only unique artists and songs, to ensure there were no duplicates, keeping only the earliest appearance on the chart to standardize the selections in the event of multiple appearances. Following song selection with the Kaggle dataset, we then obtained an API token to utilize the [Genius.com](https://genius.com/) API and [LyricGenius Library](https://pypi.org/project/lyricsgenius/) to conduct web scraping and pull the lyrics for the specified songs which became the corpus for this project."
    ]
   },
   {
@@ -379,7 +380,7 @@
     "- Address missing values, data errors, unnecessary data, and unclear values:\n",
     "    - No null values\n",
     "    - Data Errors : The API returned lyrics that were not the expected song's lyrics \n",
-    "        - Mannually checking some\n",
+    "        - Manually checking some\n",
     "        Compared title, if they match after cleaning manipulation, \n",
     "---    \n",
     "- Create feature engineered columns:\n",
@@ -412,8 +413,8 @@
    "source": [
     "### Sentiment Analysis\n",
     "\n",
-    "Natural Langauge Toolkit (NLTK) was used to prepare the corpus for sentiment analysis. NLTK assigns a score between -1 and +1 to each song based on whether the the sum of words and phrases in the song are considered to be positive or negative.\n",
-    "After scores were assigned to each song based upon the lyrical content, sentiment score ranges were divided into 5 categories: very negative, somewhat negative, nuetral, somewhat positive, and very positive. Each song was then labled with the sentiment category by it's correspoinding sentiment score in preparation for exploration."
+    "Natural Language Toolkit (NLTK) was used to prepare the corpus for sentiment analysis. NLTK assigns a score between -1 and +1 to each song based on whether the the sum of words and phrases in the song are considered to be positive or negative.\n",
+    "After scores were assigned to each song based upon the lyrical content, sentiment score ranges were divided into 5 categories: very negative, somewhat negative, nuetral, somewhat positive, and very positive. Each song was then labeled with the sentiment category by its corresponding sentiment score in preparation for exploration."
    ]
   },
   {
@@ -764,19 +765,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad099ea-da58-4d5c-81d7-b391b4449579",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "29c0e03e-2952-4eb6-9d44-54a5a04b8bf4",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -812,7 +802,7 @@
    "id": "0e368cfc-c8db-4375-9436-087118ad07ca",
    "metadata": {},
    "source": [
-    "After acquiring and preparing the corpus, exploration was conducted. Due to the intent to explore sentiment and topics, exploration was completed on the entire cleaned corpus. Following exploration, the split sets (train, validate, and test samples) were utilized through modeling, where only the train set was used to prevent data leakage."
+    "After acquiring and preparing the corpus, exploration was conducted. Due to the intent to explore sentiment and topics, exploration was completed on the entire cleaned corpus. "
    ]
   },
   {
@@ -833,11 +823,11 @@
     "The initial questions for this project revolved around sentiment and topic prevalence and were used as the foundation of exploration.\n",
     "\n",
     "- How does sentiment within lyrics change over time?\n",
-    "- Is there a correclation between sentiment and the time a song was popular?\n",
     "- Is there a correlation between events in history and sentiment of lyrics?\n",
     "- What topics are most prevalent across the decades?\n",
     "- How do topics within lyrics change over time?\n",
-    "- Is there a correlation between topics and the time a song was popular?\n"
+    "- Is there a correlation between topics and the time a song was popular?\n",
+    "---"
    ]
   },
   {
@@ -846,14 +836,8 @@
    "metadata": {},
    "source": [
     "#### QUESTION 1: \n",
-    "**How does sentiment within lyrics change over time?**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cd75bdbe-3c78-47eb-a03e-06a4c039a942",
-   "metadata": {},
-   "source": [
+    "#### **How does sentiment within lyrics change over time?**\n",
+    "\n",
     "To examine the change in average sentiment score over time, we used a rolling 5 year average and average by decade. "
    ]
   },
@@ -885,7 +869,9 @@
    "metadata": {},
    "source": [
     "#### ANSWER 1:\n",
-    "Sentiment was fairly steady in the 1960's and 1970's, followed by a gradual downward trend which became sharper in the 2000's and 2010's. The downward trend is due to an increase in very negative sentiment and decrease in very positive sentiment while mid-range sentiment stays constant."
+    "Sentiment was fairly steady in the 1960's and 1970's, followed by a **gradual downward trend** which became sharper in the 2000's and 2010's. The downward trend is due to an increase in very negative sentiment and decrease in very positive sentiment while mid-range sentiment stays constant.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -893,16 +879,8 @@
    "id": "0ae6d3d5",
    "metadata": {},
    "source": [
-    "#### Question 2:\n",
-    "What topics are most prevalent across the decades?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d31579a1-4752-44bf-9783-491f74de39a8",
-   "metadata": {},
-   "source": [
-    " but through manual analysis, it was determined a few groupings were very similar. Combining these groupings into the same topic resulted in **17 finalized topics for our dataset**. "
+    "#### QUESTION 2:\n",
+    "#### **What topics are most prevalent across the decades?**"
    ]
   },
   {
@@ -932,8 +910,10 @@
    "id": "113ea4db",
    "metadata": {},
    "source": [
-    "#### Answer 2:\n",
-    "Breakups are by far the most popular topics in songs across all decades, followed by being or feeling lost, then affection, sex, and nature."
+    "#### ANSWER 2:\n",
+    "By count, breakup references are the most occurring topic in songs across all decades, followed by the topics of being lost, affection, sex, and nature.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -942,6 +922,31 @@
    "metadata": {},
    "source": [
     "#### QUESTION 3: \n",
+    "#### **How do topics within lyrics change over time?**\n",
+    "\n",
+    "To answer this question we grouped topics that aligned to others in theme, for a focus on topic trends.  The first of the groups was labled **Relationship Topics** and the second, **Vice Topics**. \n",
+    "\n",
+    "**Relationship Topics**\n",
+    "- affection\n",
+    "- breakups\n",
+    "- heartache\n",
+    "- jealousy\n",
+    "- love\n",
+    "- sex\n",
+    "\n",
+    "**Vice Topics**\n",
+    "- sex\n",
+    "- money\n",
+    "- violence\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69063042-8396-4d30-a9cc-2fc1f8690293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "- How do relationship topics change over the decades?"
    ]
   },
@@ -1013,8 +1018,10 @@
    "id": "17adc54a",
    "metadata": {},
    "source": [
-    "#### Answer 3:\n",
-    "While most relationship topics appear constant, affection and sex have an inverse relationship."
+    "#### ANSWER 3:\n",
+    "While most relationship topics appear constant, affection and sex have an inverse relationship.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1023,7 +1030,7 @@
    "metadata": {},
    "source": [
     "#### QUESTION 4: \n",
-    "- How do vice topics change over the decades?"
+    "**How do vice topics change over the decades?**"
    ]
   },
   {
@@ -1064,7 +1071,9 @@
    "metadata": {},
    "source": [
     "#### ANSWER 4: \n",
-    "After 1990 sex became extremely popular in lyrics, then around 2015 violence and money exploded as well."
+    "After 1990 sex became extremely popular in lyrics, then around 2015 violence and money exploded as well.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1072,8 +1081,8 @@
    "id": "50827cd0",
    "metadata": {},
    "source": [
-    "#### Question 5:\n",
-    "How has the prevalence of the word 'like' changed over the decades?"
+    "#### QUESTION 5:\n",
+    "**How has the prevalence of the word 'like' changed over the decades?**"
    ]
   },
   {
@@ -1161,8 +1170,8 @@
    "id": "6554fdcf",
    "metadata": {},
    "source": [
-    "#### Question 7:\n",
-    "How did unique word count change over time?"
+    "#### QUESTION 7:\n",
+    "#### **How did unique word count change over time?**"
    ]
   },
   {
@@ -1192,29 +1201,31 @@
    "id": "46a95962",
    "metadata": {},
    "source": [
-    "#### Answer 7:"
+    "#### ANSWER 7:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "a15980c0-808c-448b-9a74-6fb25fff882e",
+   "cell_type": "markdown",
+   "id": "b74491e4-2da9-4f32-a606-c7b1b9dd8f6c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'E' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_22014/3090464261.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'E' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "E"
+    "### EXPLORATION SUMMARY\n",
+    "\n",
+    "Exploration revealed _______\n",
+    "\n",
+    "\n",
+    "\n",
+    "This information was utilized goign forward into modeline to adjust hyperparameters based upon impactful features, primarily _____________ ___________. ____________.\n",
+    "\n",
+    "===\n",
+    "An Overview of the exploratory questions and answers follows:\n",
+    "\n",
+    "1. How does sentiment within lyrics change over time?\n",
+    "2. Is there a correlation between events in history and sentiment of lyrics?\n",
+    "3. What topics are most prevalent across the decades?\n",
+    "4. How do topics within lyrics change over time?\n",
+    "5. Is there a correlation between topics and the time a song was popular?\n",
+    "\n"
    ]
   },
   {
@@ -1257,7 +1268,7 @@
    "id": "a1c20745-cd3b-4686-a502-99981315e1d0",
    "metadata": {},
    "source": [
-    "After exploring the corpus, it was split into 3 samples; train, validate, and test using:\n",
+    "Following exploration, the data was split into train, validate, and test samples using:\n",
     "\n",
     "- Random State: 42\n",
     "- Test = 20% of the original dataset\n",
@@ -1265,7 +1276,7 @@
     "    - Validate (.30*.80) = 24% of the original dataset\n",
     "    - Train (.70*.80) = 56% of the original dataset\n",
     "    \n",
-    "The split of this data can be replicated using the splitdata function saved within the prepare.py file inside the [Lyrical Evolution](https://github.com/CBRJ-Lyrical-Metrics/song-lyrics-capstone) repository on GitHub. Following the split, only the train set was taken into modeling."
+    "The split of this data can be replicated using the splitdata function saved within the prepare.py file inside the [Lyrical Evolution](https://github.com/CBRJ-Lyrical-Metrics/song-lyrics-capstone) repository on GitHub. "
    ]
   },
   {
